--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -6,7 +6,7 @@ cmake_minimum_required(VERSION 3.4.1)
 
 # Make sure we use flags for OpenGL in cpp
 set(CMAKE_VERBOSE_MAKEFILE on)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lGLESv2 -lEGL -std=gnu++11")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lGLESv2 -std=gnu++11")
 
 # OpenCV includes
 include_directories(${pathToOpenCv}/sdk/native/jni/include)
