--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -6,7 +6,7 @@ cmake_minimum_required(VERSION 3.4.1)
 
 # Make sure we use flags for OpenGL in cpp
 set(CMAKE_VERBOSE_MAKEFILE on)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lGLESv2 -std=gnu++11")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")
 
 # OpenCV includes
 include_directories(${pathToOpenCv}/sdk/native/jni/include)
@@ -21,5 +21,4 @@ add_library( lib_opencv SHARED IMPORTED )
 set_target_properties(lib_opencv PROPERTIES IMPORTED_LOCATION ${pathToProject}/app/src/main/jniLibs/${ANDROID_ABI}/libopencv_java3.so)
 
 # Link libraries
-target_link_libraries( native-lib $\{log-lib} lib_opencv)
-target_link_libraries( native-lib android log)
+target_link_libraries( native-lib lib_opencv android log )
